LIST OF CHANGES
---------------

 - support generation of targeted stats files in seq_alignment.pm with p4
 - qc jobs creation, can_run, check object instantiation:
     do not supply path/qc_in, which is now optional
     do not set attributes that the object does not have
 - allow specification of implementation (java or bambi) of illumina2bam and bamindexdecoder
    in p4 stage 1 via general_values.ini
 - add Broad Institute's RNA-SeQC to list of autoqc checks
 - run bam_flagstats autoqc check via the qc script

release 51.2
 - patch to script_must_be_unique_runner - only ignore exact matches to the job id
 - change function order to run p4 stage 1 analysis by default

release 51.1.1
 - extended is_hiseqx_run to detect HiSeq 4000 runs
 - samtools1 cat .. doesn't work with different references, replaced by samtools1 merge ..

release 51.1
 - replaced bamcat .. by samtools1 cat .. in seqchksum comparision
   previous command line was too long for large pools
 - changes for pools with >999 samples, LSF job array index now 5 digits
   modified tests
 - added lims_driver_type cli option

release 51.0
 - use npg_irods npg_publish_illumina_run.pl in place of data_handling irods_bam_loader.pl
 - provide appropiately changed second index read tags for ordered flowcell
   instruments (typically rev. complement) e.g. HiSeqX
 - in both the analysis and archival function order have an extra
   ml warehouse loader job to set the stage for loading to iRODS
 - warehouse loaders that are run after setting qc complete date
   wait for the runfolder to be moved to outgoing, their log location
   is updated accordingly

release 50.3
 - use 'purpose' field to decide if qc_run
 - study-specific software stack for the analysis pipeline
 - added new module for p4 stage1 analysis

release 50.2
 - names of the pipeline daemon modules and scripts harmonised
 - the daemon module does not inherit from the pipeline base class thus
   reducing the number of command line script options